--- a/.gitignore
+++ b/.gitignore
@@ -34,13 +34,13 @@ plugins/*
 # Ignore everything in "themes" except the active theme. #
 # ====================================================== #
 themes/*
-!themes/rethink/
+!themes/rcforward/
 
 # Ignore npm packages #
 # =================== #
-themes/rethink/node_modules/*
+themes/rcforward/node_modules/*
 
 # Ignore build files #
 # ================== #
-themes/rethink/gulpfile.js
-themes/rethink/build/*
+themes/rcforward/gulpfile.js
+themes/rcforward/build/*
